force-app/main/default/objects/ssot__AdverseEventParty__dlm/fields/ssot__rel_1716667905648_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716667905648_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventParty_AdverseEventId_map_rel</label>
    <referenceTo>ssot__AdverseEvent__dlm</referenceTo>
    <relationshipLabel>AdverseEventParty_AdverseEventId_map_rel</relationshipLabel>
    <relationshipName>rel_1716667905648_end</relationshipName>
    <type>Lookup</type>
</CustomField>