force-app/main/default/objects/ssot__AdverseEventParty__dlm/fields/ssot__rel_1716721820950_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716721820950_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AdverseEventParty_PartyId_map_Accoun_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>AdverseEventParty_PartyId_map_Accoun_rel</relationshipLabel>
    <relationshipName>rel_1716721820950_end</relationshipName>
    <type>Lookup</type>
</CustomField>