force-app/main/default/objects/ssot__AdverseEventParty__dlm/fields/ssot__Role__c.field-meta.xml
<CustomField>
    <fullName>ssot__Role__c</fullName>
    <label>Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Role</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>